--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,9 +22,9 @@ function initMap(){
   // 引用者注:google.maps.Geocoderインスタンスを生成
   geocoder = new google.maps.Geocoder()
 
-  let map = new google.maps.Map(document.getElementById('map'), {
-  center: {lat: -34.397, lng: 150.644},
-  zoom: 8
+  map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: -34.397, lng: 150.644},
+    zoom: 8
   });
 }
 function codeAddress() {
