--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,9 +22,19 @@ function initMap(){
   // 引用者注:google.maps.Geocoderインスタンスを生成
   geocoder = new google.maps.Geocoder()
 
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: -34.397, lng: 150.644},
-    zoom: 8
+  // 位置情報を取得
+  navigator.geolocation.getCurrentPosition(function (position) {
+    LatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+    // 取得した位置情報を中心に表示
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: LatLng,
+      zoom: 15
+    });
+    // 現在地にマーカー
+    var marker = new google.maps.Marker({
+      map: map,
+      position: LatLng
+    });
   });
 }
 function codeAddress() {
