--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -8,26 +8,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding: 20px;
 }
 
 .top-desc{
+  margin-top: 64px;
   color: #fff;
 }
 
 .top-title{
   font-size: 64px;
   color: #fff;
-  margin-bottom: 32px;
+  margin-bottom: 54px;
 }
 
-.top-signup-btn{
-  color: #fff100;
+.top-btn{
+  width: 180px;
+  text-align: center;
   padding: 12px 24px;
-  border: 2px solid #fff100;
   font-weight: 900;
   &:hover{
     opacity: .7;
     transition: .3s;
   }
+}
+
+.top-signup-btn{
+  color: #fff100;
+  border: 2px solid #fff100;
+  margin-bottom: 16px;
+}
+
+.top-signin-btn{
+  color: #fff;
+  border: 2px solid #fff;
 }
