--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,15 +4,20 @@
   margin: 0 auto;
 }
 
+.top-background{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .top-main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
 }
 
 .top-desc{
-  margin-top: 64px;
+  // margin-top: 64px;
   color: #fff;
 }
 
