--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,19 @@
 <div class="container">
-  <div class="top-main">
-    <p class="top-desc">今日合コンができるかも</p>
-    <h1 class="top-title">MatchApp</h1>
-    <%= link_to "新規登録はこちら", new_user_registration_path, class:"top-signup-btn top-btn" %>
-    <%= link_to "ログイン", new_user_session_path, class:"top-signin-btn top-btn" %>
+  <div class="top-background">
+    <div class="top-main">
+      <p class="top-desc">今日合コンができるかも</p>
+      <h1 class="top-title">MatchApp</h1>
+      <%= link_to "新規登録はこちら", new_user_registration_path, class:"top-signup-btn top-btn" %>
+      <%= link_to "ログイン", new_user_session_path, class:"top-signin-btn top-btn" %>
+    </div>
   </div>
   <style>
-    .top-main{
+    .top-background{
       background-image: url("<%= asset_path('top.png') %>");
       width: 100%;
       height:400px;
       background-size: cover;
+      padding: 20px;
     }
   </style>
 </div>
