--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -17,14 +17,15 @@
 }
 
 .top-desc{
-  // margin-top: 64px;
   color: #fff;
+  font-family: '游明朝','Yu Mincho',YuMincho,'Hiragino Mincho Pro',serif;
 }
 
 .top-title{
   font-size: 64px;
   color: #fff;
   margin-bottom: 54px;
+  font-family: '游明朝','Yu Mincho',YuMincho,'Hiragino Mincho Pro',serif;
 }
 
 .top-btn{
