--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="top">
     <div class="top-background">
       <div class="top-main">
-        <p class="top-desc">今日合コンができるかも</p>
+        <p class="top-desc">今日・すぐに・合コンがしたい</p>
         <h1 class="top-title">MatchApp</h1>
         <%= link_to "新規登録はこちら", new_user_registration_path, class:"top-signup-btn top-btn" %>
         <%= link_to "ログイン", new_user_session_path, class:"top-signin-btn top-btn" %>
