--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,9 @@
 <header>
   <div class="container">
+    <div class="header__title">
+      <%= link_to root_path do %>
+        <%= image_tag "header-icon", class:"header__icon-img" %>
+      <% end %>
+    </div>
   </div>
 </header>
