--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,2 +1,48 @@
 <div class="container">
+  <div class="regist-header">
+    アカウント作成
+  </div>
+
+  <div class="regist-form-wrapper">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="form">
+        <div class="field">
+          <div class="label">
+            <label>
+              メールアドレス
+            </label>
+          </div>
+          <%= f.email_field :email, type: "text", :placeholder => "example@matchapp.jp", required: "required" %>
+        </div>
+        <div class="field">
+          <div class="label">
+            <label>
+              パスワード
+            </label>
+          </div>
+          <%= f.password_field :password, type: "text", :placeholder => "パスワード", required: "required" %>
+        </div>
+        <div class="field">
+          <div class="label">
+            <label>
+              確認用のパスワード
+            </label>
+          </div>
+          <%= f.password_field :password_confirmation, type: "text", :placeholder => "確認用のパスワード", required: "required" %>
+        </div>
+
+        <div class="regist-attention-text-wrapper">
+          <p>
+            ※利用規約、プライバシーポリシーに同意の上ご利用ください
+          </p>
+        </div>
+
+        <div class="field">
+          <div class="button-wrapper">
+            <%= f.submit "上記に同意して登録する", class:"app-button conversion" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
