--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,16 @@
 
   <body class="drawer drawer--right">
     <%= render "shared/header" %>
+    <% if flash.any? %>
+        <% flash.each do |key, value| %>
+          <div class="flash alert-<%= key %>">
+            <%= content_tag(:div, value, class: "#{key}") %>
+          </div>
+        <% end %>
+    <% else %>
+      <div id="ie-alert__wrapper"></div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
