--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,7 @@
 
   <div class="regist-form-wrapper">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "shared/error_messages", resource: resource %>
       <div class="form">
         <div class="field">
           <div class="label">
