--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -7,7 +7,7 @@
       <%= render "shared/error_messages", resource: resource %>
       <div class="form">
         <div class="field">
-          <%= f.email_field :email, type: "text", :placeholder => "example@matchapp.jp", required: "required" %>
+          <%= f.email_field :email, type: "email", :placeholder => "example@matchapp.jp", required: "required" %>
         </div>
       </div>
 
