--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -19,7 +19,7 @@
     transition: color .1s ease,border-color .1s ease;
     box-sizing: border-box;
   }
-  input[type=text]{
+  input[type=text],input[type=password],input[type=email]{
     padding: .67857143em 1em;
     font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
     line-height: 1.21428571em;
