--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -26,6 +26,12 @@
     width: 100%;
     border: 2px solid #8bd3dd;
   }
+  select{
+    padding: .67857143em 1em;
+    font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
+    line-height: 1.21428571em;
+    border: 2px solid #8bd3dd;
+  }
 }
 
 .button-wrapper{
