--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,8 +1,9 @@
 body{
   margin: 0;
-  font-family: sans-serif;
+  // font-family: sans-serif;
   background: #fef6e4;
   color: #172c66;
+  font-family: -apple-system,BlinkMacSystemFont,\\6E38\30B4\30B7\30C3\30AF\4F53,Yu Gothic,YuGothic,sans-serif;
 }
 
 a {
@@ -21,4 +22,8 @@ ul {
 
 p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
+}
+
+input {
+  outline: 0;
 }
