--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -21,6 +21,7 @@
   }
   input[type=text],input[type=password],input[type=email]{
     padding: 10px 12px;
+    font-size: 14px;
     font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
     line-height: 1.21428571em;
     width: 100%;
