--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -24,6 +24,10 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-input {
+input, select {
   outline: 0;
+}
+
+input[type=text],input[type=password],input[type=email],input[type=submit],select{
+  -webkit-appearance: none;
 }
