--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,5 +1,5 @@
 <title>MatchApp</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 
