--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -7,7 +7,7 @@
       <%= render "shared/error_messages", resource: resource %>
       <div class="form">
         <div class="field">
-          <%= f.email_field :email, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+          <%= f.email_field :email, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), :placeholder => "example@matchapp.jp" %>
         </div>
       </div>
 
