--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,9 @@
             </button>
           </a>
         </li>
-        <li><a class="drawer-menu-item" href="#">Nav1</a></li>
+        <li>
+          <%= link_to "プロフィール編集", edit_user_profile_path, class:"drawer-menu-item" %>
+        </li>
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"drawer-menu-item" %>
         </li>
