--- a/app/views/user/user_profiles/edit.html.erb
+++ b/app/views/user/user_profiles/edit.html.erb
@@ -40,7 +40,7 @@
           </div>
           <%= f.select :job, UserProfile.jobs_i18n.keys.map { |k| [UserProfile.jobs_i18n[k], k]}, {prompt: "選択してください"} %>
         </div>
-        <div class="field">
+        <div class="field icon-field">
           <div class="label">
             <label>
               自分のプロフィール画像
