認証後ログイン

--- a/app/views/user/user_profiles/edit.html.erb
+++ b/app/views/user/user_profiles/edit.html.erb
@@ -64,7 +64,7 @@
 
         <div class="field">
           <div class="button-wrapper">
-            <%= f.submit "更新する", class:"app-button conversion" %>
+            <%= f.submit "プロフィール更新", class:"app-button conversion" %>
           </div>
         </div>
 
