post 作成フォーム

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -54,6 +54,12 @@
   background: #f582ae;
 }
 
+.next{
+  color: #001858;
+  border-color: #f582ae;
+  background: #f582ae;
+}
+
 .user-profile__preview-box-wrapper{
   margin: 16px auto;
   max-width: 160px;
