--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -23,6 +23,16 @@ header > .container{
   align-items: center;
 }
 
+.header-right{
+  display: flex;
+  align-items: center;
+}
+
+.notification-img{
+  width: 24px;
+  margin-right: 4px;
+}
+
 .drawer-hamburger{
   position: unset!important;
   z-index: 1!important;
