--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -6,7 +6,7 @@
 
     <% if current_user.invite_any? %>
       <div>
-        <span>招待済みメンバー</span>
+        <span>招待中メンバー</span>
         <ul>
           <% @invited_members.each do |member| %>
             <li>
