--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -39,7 +39,7 @@
           </div>
           <div class="field">
             <div class="button-wrapper">
-              <%= f.submit "送信する", class:"app-button conversion" %>
+              <%= f.submit "招待メールを送信", class:"app-button conversion" %>
             </div>
           </div>
         </div>
