--- a/app/views/user/user_profiles/edit.html.erb
+++ b/app/views/user/user_profiles/edit.html.erb
@@ -43,7 +43,7 @@
         <div class="field icon-field">
           <div class="label">
             <label>
-              自分のプロフィール画像
+              アイコン変更
             </label>
           </div>
 
