--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -39,7 +39,7 @@
           </div>
           <div class="field">
             <div class="button-wrapper">
-              <%= f.submit "招待メールを送信", class:"app-button conversion" %>
+              <%= f.submit "✉ 招待メールを送信", class:"app-button conversion" %>
             </div>
           </div>
         </div>
@@ -53,33 +53,6 @@
 </div>
 
 <style>
-.invited-member-list{
-  background: #f3d2c1;
-  border-radius: 4px;
-  padding: 16px;
-  margin-bottom: 24px;
-}
-
-.invited-member-list-title{
-  font-weight: 700;
-}
-
-.invited-member-item{
-  display: flex;
-  align-items: center;
-  line-height: 24px;
-}
-
-.invite-cancel-link{
-  display: flex;
-  align-items: center;
-  margin-right: 6px;
-}
-
-.invited-email{
-  font-size: 14px;
-}
-
 .lines-on-sides{
   position: relative;
   top: 0;
