--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -35,7 +35,7 @@
           <div class="field">
             <div class="label">
               <label>
-                招待する人のメールアドレス
+                招待したい人のメールアドレス
               </label>
             </div>
             <%= f.email_field :email, type: "email", :placeholder => "example@matchapp.jp", required: "required" %>
