--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -7,7 +7,7 @@
         <%= link_to post_member_path(@post_member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
           <%= image_tag "sm-cancel.png" %>
         <% end %>
-        <span class="invited-email"><%= member.email %></span>
+        <span class="invited-email text-ellipsis"><%= member.email %></span>
       </li>
     <% end %>
   </ul>
