--- a/app/assets/stylesheets/invite.scss
+++ b/app/assets/stylesheets/invite.scss
@@ -7,12 +7,22 @@
 
 .invited-member-list-title{
   font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.invited-member-list-sub-title{
+  font-weight: 700;
+  font-size: 14px;
 }
 
 .invited-member-item{
   display: flex;
   align-items: center;
   line-height: 24px;
+}
+
+.invite-cancel-img{
+  width: 18px;
 }
 
 .invite-cancel-link{
