--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,10 +1,14 @@
 <div class="invited-member-list">
   <p class="invited-member-list-title">招待中</p>
 
-  <% if @invited_members.present? %>
+  <% if @unconfirm_members.blank? %>
+    <span>
+      招待中のメンバーはいません
+    </span>
+  <% else %>
     <ul style="margin-bottom: 16px;">
       <span class="invited-member-list-sub-title">未承認メンバー</span>
-      <% @invited_members.each do |member| %>
+      <% @unconfirm_members.each do |member| %>
         <li class="invited-member-item">
           <% @post_member = PostMember.find_by(user: member, post: current_user.post) %>
           <%= link_to post_member_path(@post_member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
@@ -14,20 +18,36 @@
         </li>
       <% end %>
     </ul>
-  <% end %>
+  
 
-  <% if @confirmed_members.present? %>
-    <ul>
-      <span class="invited-member-list-sub-title">承認済みメンバー</span>
-      <% @confirmed_members.each do |member| %>
-        <li class="invited-member-item">
-          <% @post_member = PostMember.find_by(user: member, post: current_user.post) %>
-          <%= link_to post_member_path(@post_member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
-            <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
-          <% end %>
-          <span class="invited-email text-ellipsis"><%= member.email %></span>
-        </li>
-      <% end %>
-    </ul>
+    <% if @attend_members.present? %>
+      <ul style="margin-bottom: 16px;">
+        <span class="invited-member-list-sub-title">参加希望メンバー</span>
+        <% @attend_members.each do |member| %>
+          <li class="invited-member-item">
+            <% @post_member = PostMember.find_by(user: member, post: current_user.post) %>
+            <%= link_to post_member_path(@post_member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
+              <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
+            <% end %>
+            <span class="invited-email text-ellipsis"><%= member.email %></span>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+
+    <% if @absent_members.present? %>
+      <ul>
+        <span class="invited-member-list-sub-title">不参加メンバー</span>
+        <% @absent_members.each do |member| %>
+          <li class="invited-member-item">
+            <% @post_member = PostMember.find_by(user: member, post: current_user.post) %>
+            <%= link_to post_member_path(@post_member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
+              <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
+            <% end %>
+            <span class="invited-email text-ellipsis"><%= member.email %></span>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
   <% end %>
 </div>
