--- a/app/views/user/post_members/edit.html.erb
+++ b/app/views/user/post_members/edit.html.erb
@@ -36,10 +36,10 @@
         <%= render "shared/error_messages", resource: resource %>
         <div class="form">
           <div class="field">
-            <%= f.radio_button :is_confirmed, :true %>
-            <%= f.label :is_confirmed_true, "参加希望" %>
-            <%= f.radio_button :is_confirmed, :false %>
-            <%= f.label :is_confirmed_false, "不参加" %>
+            <%= f.radio_button :status, :attend %>
+            <%= f.label :status_attend, "参加希望" %>
+            <%= f.radio_button :status, :absent %>
+            <%= f.label :status_absent, "不参加" %>
           </div>
           <div class="field">
             <div class="button-wrapper">
