--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,13 @@
     </div>
 
     <div class="header-right">
+
+      <div id="search">
+          <search />
+      </div>
+      <%= javascript_pack_tag 'search' %>
+      <%= stylesheet_pack_tag 'search' %>
+
       <div id="notification">
           <notification />
       </div>
